  * Fixed a bug that prevented "--fetch-keys" and "--fetch-entries" in admin tool from showing multiple store results
  * Fixed problem in sample config that prevented the server from starting
  * Fixed some intermittent BindException failures across many unit tests
  * Fixed some intermittent rebalance test failures
  * Wrapped long running tests with timeouts


Release 0.96 on 09/05/2012

Changes made since 0.90.1

 * Monitoring:
     * Append cluster name to various mbeans for better stats display
     * Implement average throughput in bytes
     * Add BDB JE stats 
     * Add 95th and 99th latency tracking 
     * Add stats for ClientRequestExecutorPool
     * Add error/exception count and max getall count
     * BDB+ Data cleanup Monitoring changes
 * Rebalancing:
     * Donor-based rebalancing and post cleanup (see https://github.com/voldemort/voldemort/wiki/Voldemort-Donor-Based-Rebalancing for more details)
     * Rebalancing integration testing framework (under test/integration/voldemort/rebalance/)
     * Generate multiple cluster.xml files based on the number specified when running the tool and choose the cluster with the smallest std dev as the final-cluster.xml
     * Add status output to log for updateEntries (used by rebalancing)
 * Read-only pipeline:
     * Add hftp and webhdfs support
     * Read-only bandwidth dynamic throttler
     * Add minimum throttle limit per store
     * Add rollback capability to the Admin tool
 * Voldemort-backed stack and index linked list impl
 * Change client requests to not process responses after timeout
 * Modified client request executor timeout to not factor in the NIO selector timeout
 * Added BDB native backup capabalities, checksum verification and incremental backups (well tested, but not yet used in production)
 * Add additional client-side tracing for debugging and consistency analytics
 * Clean up logging during exception at client-side
 * Security exception handling